simplify schema and implementation
