# src/docs/swagger.json
@@ -2,7 +2,7 @@
     "openapi": "3.1.0",
     "info": {
       "title": "Speech Analytics API",
-      "description": "Presidents' Speech Analytics API",
+      "description": "Speech Analytics API",
       "termsOfService": "",
       "contact": {
         "email": "habibbhutto@gmail.com"
@@ -32,7 +32,18 @@
           "summary": "Gets the evaluation of speech data",
           "description": "Returns the evaluation object",
           "operationId": "getEvaluation",
-          "parameters": [],
+          "parameters": [
+            {
+              "in": "query",
+              "name": "url",
+              "schema": {
+                "type": "array",
+                "items": {
+                  "type": "string"
+                }
+              }
+            }
+          ],
           "responses": {
             "200": {
               "description": "successful operation",
@@ -88,6 +99,36 @@
                   }
                 }
               }
+            },
+            "408": {
+              "description": "Not found",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "$ref": "#/components/schemas/ApiResponse"
+                  }
+                }
+              }
+            },
+            "500": {
+              "description": "Not found",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "$ref": "#/components/schemas/ApiResponse"
+                  }
+                }
+              }
+            },
+            "508": {
+              "description": "Not found",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "$ref": "#/components/schemas/ApiResponse"
+                  }
+                }
+              }
             }
           }
         }
@@ -98,15 +139,15 @@
         "EvaluationResponse": {
           "type": "object",
           "properties": {
-            "field1": {
+            "mostSpeeches": {
               "type": "string",
               "example": ""
             },
-            "field2": {
+            "mostSecurity": {
               "type": "string",
               "example": ""
             },
-            "field3": {
+            "leastWordy": {
               "type": "string",
               "example": ""
             }
@@ -120,7 +161,7 @@
           "properties": {
             "code": {
               "type": "integer",
-              "format": "int32"
+              "example": 400 
             },
             "type": {
               "type": "string"
